--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,14 @@
+/node_modules
+/.pnp
+.pnp.js
+/coverage
+/build
 .DS_Store
-node_modules
-/dist
 .env.local
-.env.*.local
+.env.development.local
+.env.test.local
+.env.production.local
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
 package-lock.json
