--- a/package.json
+++ b/package.json
@@ -1,26 +1,38 @@
 {
   "name": "voxelicious",
-  "version": "1.0.0",
+  "description": "A doll's experiments with three.js.",
+  "version": "1.1.0",
   "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
-  },
   "dependencies": {
-    "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "@types/node": "^16.18.2",
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "typescript": "^4.8.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "@vue/cli-service": "~5.0.0",
-    "node-sass": "^7.0.1",
-    "sass": "^1.53.0",
-    "sass-loader": "^13.0.2",
-    "three": "^0.141.0"
+    "@types/three": "^0.144.0",
+    "postprocessing": "^6.29.1",
+    "sass": "^1.55.0",
+    "three": "^0.146.0"
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead",
-    "not ie 11"
-  ]
+  "homepage": "/voxelicious/"
 }
